prusti-tests/tests/parse/ui/forall_fail.stderr
error: expected parenthesized expression after quantifier
 --> $DIR/forall_fail.rs:8:12
  |
8 | #[requires(forall)]
  |            ^^^^^^

error: expected quantifier body
  --> $DIR/forall_fail.rs:11:12
   |
11 | #[requires(forall())]
   |            ^^^^^^

error: expected quantifier body
  --> $DIR/forall_fail.rs:14:12
   |
14 | #[requires(forall(|))]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/forall_fail.rs:17:12
   |
17 | #[requires(forall(||) 1+1)]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/forall_fail.rs:20:12
   |
20 | #[requires(forall(||) || forall(||))]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/forall_fail.rs:23:12
   |
23 | #[requires(forall(|| 1+1 == 1+1, triggers=[1]))]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/forall_fail.rs:26:12
   |
26 | #[requires(forall(|| true, triggers=[(1,2), 1]))]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/forall_fail.rs:29:12
   |
29 | #[requires(forall(|| true, triggers=1))]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/forall_fail.rs:32:12
   |
32 | #[requires(forall(||))]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/forall_fail.rs:35:12
   |
35 | #[requires(forall(|| 1+1 == 1+1))]
   |            ^^^^^^

error: expected quantifier body
  --> $DIR/forall_fail.rs:38:12
   |
38 | #[requires(forall(||, triggers=[]))]
   |            ^^^^^^

error: a quantifier must have at least one argument
  --> $DIR/forall_fail.rs:41:12
   |
41 | #[requires(forall(|| 1+1 == 1+1, triggers=[(1,)]))]
   |            ^^^^^^

error: aborting due to 12 previous errors

